--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "modern-normalize": "^1.1.0",
+    "simplelightbox": "^2.13.0",
     "tui": "^1.0.0",
     "tui-pagination": "^3.4.1"
   },
@@ -28,6 +29,7 @@
     "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
+    "parcel-transformer-hbs": "^1.0.4",
     "posthtml-include": "^1.7.4"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead"
