--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
     "tui": "^1.0.0",
     "tui-pagination": "^3.4.1"
   },
